--- a/HepsiBurada.WEB.UI/Views/Account/Login.cshtml
+++ b/HepsiBurada.WEB.UI/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model HepsiBurada.MODELS.ViewModels.LoginViewModel
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Login V13</title>
@@ -36,39 +37,49 @@
             <div class="login100-more" style="background-image: url('~/images/bg-01.jpg');"></div>
 
             <div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-                <form class="login100-form validate-form">
+                @using (Html.BeginForm("Login", "Account", FormMethod.Post, new { @class = "login100-form validate-form", id = "frmLogin" }))
+                {
+                    @Html.AntiForgeryToken()
                     <span class="login100-form-title p-b-59">
-                        Sign In
+                        Giriş Yap
                     </span>
 
-                    
+
 
                     <div class="wrap-input100 validate-input" data-validate="Username is required">
                         <span class="label-input100">Username</span>
-                        <input class="input100" type="text" name="username" placeholder="Username...">
+                        @Html.TextBoxFor(x => x.UserName, new { @class = "input100", type = "text", name = "uName", id = "username" })
                         <span class="focus-input100"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
                         <span class="label-input100">Password</span>
-                        <input class="input100" type="text" name="pass" placeholder="*************">
+                        @Html.TextBoxFor(x => x.Password, new { @class = "input100", type = "password", name = "pass", id = "pass" })
                         <span class="focus-input100"></span>
+                        <div>
+                            <a href="@Url.Action("RecoverPassword", "Account")" class="txt1">
+                                Forgot Password?
+                            </a>
+                        </div>
                     </div>
-
+                    <p class="text-muted">@Html.ValidationSummary()</p>
+                    <h3>@TempData["Message"]</h3>
+                    <br />
+                    <br />
                     <div class="container-login100-form-btn">
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
                             <button class="login100-form-btn">
-                                Sign Up
+                                Giriş Yap
                             </button>
                         </div>
 
-                        <a href="#" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
-                            Sign in
+                        <a href="Register" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
+                            Kayıt Ol
                             <i class="fa fa-long-arrow-right m-l-5"></i>
                         </a>
                     </div>
-                </form>
+                }
             </div>
         </div>
     </div>
