--- a/HepsiBurada.WEB.UI/Views/Account/Register.cshtml
+++ b/HepsiBurada.WEB.UI/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model HepsiBurada.MODELS.ViewModels.RegisterViewModel
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Login V13</title>
@@ -36,43 +37,50 @@
             <div class="login100-more" style="background-image: url('~/images/bg-01.jpg');"></div>
 
             <div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-                <form class="login100-form validate-form">
+
+                @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "login100-form validate-form", id = "regForm" }))
+                {
+                    @Html.AntiForgeryToken()
                     <span class="login100-form-title p-b-59">
-                        Sign Up
+                        Kayıt Ol
                     </span>
+                    <br />
+                    <p class="text-muted">@Html.ValidationSummary()</p>
+                    <h3>@TempData["Message"]</h3>
+                    <br />
 
                     <div class="wrap-input100 validate-input" data-validate="Name is required">
                         <span class="label-input100">Name</span>
-                        <input class="input100" type="text" name="name" placeholder="Name...">
+                        @Html.TextBoxFor(x => x.Name, new { @class = "input100", type = "text" })
                         <span class="focus-input100"></span>
                     </div>
                     <div class="wrap-input100 validate-input" data-validate="Surname is required">
                         <span class="label-input100">Surname</span>
-                        <input class="input100" type="text" name="surname" placeholder="Surname...">
+                        @Html.TextBoxFor(x => x.Surname, new { @class = "input100", type = "text", name = "pass", id = "pass" })
                         <span class="focus-input100"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
                         <span class="label-input100">Email</span>
-                        <input class="input100" type="text" name="email" placeholder="Email addess...">
+                        @Html.TextBoxFor(x => x.Email, new { @class = "input100", type = "mail", name = "email", id = "email" })
                         <span class="focus-input100"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Username is required">
                         <span class="label-input100">Username</span>
-                        <input class="input100" type="text" name="username" placeholder="Username...">
+                        @Html.TextBoxFor(x => x.UserName, new { @class = "input100", type = "text", name = "uName", id = "uName" })
                         <span class="focus-input100"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
                         <span class="label-input100">Password</span>
-                        <input class="input100" type="text" name="pass" placeholder="*************">
+                        @Html.TextBoxFor(x => x.Password, new { @class = "input100", type = "password", name = "pass", id = "pass" })
                         <span class="focus-input100"></span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Repeat Password is required">
                         <span class="label-input100">Repeat Password</span>
-                        <input class="input100" type="text" name="repeat-pass" placeholder="*************">
+                        @Html.TextBoxFor(x => x.ConfirmPassword, new { @class = "input100", type = "password", name = "confirmPass", id = "confirmPass" })
                         <span class="focus-input100"></span>
                     </div>
 
@@ -96,16 +104,17 @@
                         <div class="wrap-login100-form-btn">
                             <div class="login100-form-bgbtn"></div>
                             <button class="login100-form-btn">
-                                Sign Up
+                                Kayıt Ol
                             </button>
                         </div>
 
-                        <a href="#" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
-                            Sign in
+                        <a href="Login" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
+                            Giriş Yap
                             <i class="fa fa-long-arrow-right m-l-5"></i>
                         </a>
                     </div>
-                </form>
+
+                }
             </div>
         </div>
     </div>
